Revert "generalize spacing fix"
This reverts commit 6bfb0e7591029ae8be4b4ae8f8b82001d91e0e9a.

--- a/css/spicific.css
+++ b/css/spicific.css
@@ -354,6 +354,6 @@ sup {
   text-decoration: line-through;
 }
 
-P[id^="line"] * + *::before {
+.selectable-term + .selectable-term::before {
 	content: " ";
 }
